build: :rocket: Se trae la API y el FrontEnd de un repositorio privado para evitar copias

--- a/ionic-app/src/app/pages/review-edition/review-edition.page.html
+++ b/ionic-app/src/app/pages/review-edition/review-edition.page.html
@@ -55,7 +55,7 @@
     </ion-item>
 
     <ion-fab *ngIf="!!review.id" slot="fixed" vertical="bottom" horizontal="start">
-      <ion-fab-button (click)="delete()">
+      <ion-fab-button color="danger" (click)="presentDeleteAlert()">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab>
