--- a/ionic-app/src/global.scss
+++ b/ionic-app/src/global.scss
@@ -26,7 +26,7 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 ion-title {
-  color: #3a3a3a;
+  color: white;
   text-align: center;
   font-weight: bold;
 }
