style: :lipstick: Se cambia el color de los botones

--- a/ionic-app/src/app/pages/book-edition/book-edition.page.html
+++ b/ionic-app/src/app/pages/book-edition/book-edition.page.html
@@ -58,7 +58,7 @@
       </ion-fab-button>
     </ion-fab>
     <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-button (click)="saveChanges()">
+      <ion-button color="tertiary" (click)="saveChanges()">
         GUARDAR
       </ion-button>
     </ion-fab>
