--- a/ionic-app/src/app/pages/books/books.page.html
+++ b/ionic-app/src/app/pages/books/books.page.html
@@ -42,13 +42,13 @@
   </ion-item>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button (click)="addNewBook()">
+    <ion-fab-button color="tertiary" (click)="addNewBook()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="start">
-    <ion-fab-button (click)="viewReviews()">
+    <ion-fab-button color="tertiary" (click)="viewReviews()">
       <ion-icon name="chevron-forward-circle"></ion-icon>
     </ion-fab-button>
   </ion-fab>
