--- a/ionic-app/src/app/pages/reviews/reviews.page.html
+++ b/ionic-app/src/app/pages/reviews/reviews.page.html
@@ -49,13 +49,13 @@
   </ion-list>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-    <ion-fab-button (click)="addNewReview()">
+    <ion-fab-button color="tertiary" (click)="addNewReview()">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
 
   <ion-fab slot="fixed" vertical="bottom" horizontal="start">
-    <ion-fab-button (click)="viewBooks()">
+    <ion-fab-button color="tertiary" (click)="viewBooks()">
       <ion-icon name="chevron-forward-circle"></ion-icon>
     </ion-fab-button>
   </ion-fab>
