style: :lipstick: Se mejora la visualización de la caratula del libro en el listado de libros

--- a/ionic-app/src/app/pages/books/books.page.html
+++ b/ionic-app/src/app/pages/books/books.page.html
@@ -14,7 +14,7 @@
 
         <ion-col size="4" class="col-avatar">
           <ion-avatar>
-            <img [src]="book.cover"/>
+            <img class="squared-avatar" [src]="book.cover"/>
           </ion-avatar>
         </ion-col>
 
