--- a/ionic-app/src/app/pages/books/books.page.scss
+++ b/ionic-app/src/app/pages/books/books.page.scss
@@ -6,3 +6,12 @@
 .isbn {
     color: gray;
 }
+
+.squared-avatar {
+    width: 100px;
+    height: 100px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
