--- a/ionic-app/src/app/pages/book-edition/book-edition.page.html
+++ b/ionic-app/src/app/pages/book-edition/book-edition.page.html
@@ -27,6 +27,9 @@
                   [autoGrow]="true"
                   [(ngModel)]="book.isbn"></ion-textarea>
     </ion-item>
+    <ion-item *ngIf="!isbnValido()">
+      <ion-label color="danger">El isbn deben ser tres números, un guión y diez números</ion-label>
+    </ion-item>
     <ion-item class="add-margin">
         <ion-label position="floating">url de la imagen</ion-label>
         <ion-textarea name="url de la imagen"
