--- a/ionic-app/src/app/pages/book-edition/book-edition.page.html
+++ b/ionic-app/src/app/pages/book-edition/book-edition.page.html
@@ -28,7 +28,7 @@
                   [(ngModel)]="book.isbn"></ion-textarea>
     </ion-item>
     <ion-item *ngIf="!isbnValido()">
-      <ion-label color="danger">El isbn deben ser tres números, un guión y diez números</ion-label>
+      <ion-label color="danger">El isbn deben ser tres números, un guión <br> y diez números</ion-label>
     </ion-item>
     <ion-item class="add-margin">
         <ion-label position="floating">url de la imagen</ion-label>
@@ -55,13 +55,17 @@
       </ion-popover>
     </ion-item>
 
+    <ion-item *ngIf="camposRellenos()">
+      <ion-label color="danger">Se deben rellenar todos los campos correctamente</ion-label>
+    </ion-item>
+
     <ion-fab *ngIf="!!book.id" color="red" slot="fixed" vertical="bottom" horizontal="start">
       <ion-fab-button color="danger" (click)="presentDeleteAlert()">
         <ion-icon name="trash-outline"></ion-icon>
       </ion-fab-button>
     </ion-fab>
     <ion-fab slot="fixed" vertical="bottom" horizontal="end">
-      <ion-button color="tertiary" (click)="saveChanges()">
+      <ion-button [disabled]="camposRellenos()" color="tertiary" (click)="saveChanges()">
         GUARDAR
       </ion-button>
     </ion-fab>
