fix: :lipstick: Se corrigue error de texto

--- a/ionic-app/src/app/pages/book-edition/book-edition.page.html
+++ b/ionic-app/src/app/pages/book-edition/book-edition.page.html
@@ -28,7 +28,7 @@
                   [(ngModel)]="book.isbn"></ion-textarea>
     </ion-item>
     <ion-item *ngIf="!isbnValido()">
-      <ion-label color="danger">El isbn deben ser tres números, un guión <br> y diez números</ion-label>
+      <ion-label color="danger">El ISBN deben ser tres números, un guión <br> y diez números</ion-label>
     </ion-item>
     <ion-item class="add-margin">
         <ion-label position="floating">url de la imagen</ion-label>
